--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ img {
   height: 40vh;
 }
 .hero .content {
+  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -93,9 +94,13 @@ img {
 }
 
 .hero .content h1 {
+  transform: translate(1200px);
+  animation: anime1 1.2s forwards ease-in-out;
   font-size: 55px;
 }
 .hero .content p {
+  transform: translate(-1200px);
+  animation: anime2 1.2s forwards ease-in-out;
   font-size: 24px;
   max-width: 600px;
   margin: 20px 0 30px 0;
@@ -176,9 +181,24 @@ img {
   padding: 20px 0;
 }
 #message {
-  width: 400px;
+
+  max-width: 500px;
   height: 150px;
   border-radius: 5px;
+}
+
+/* KEYFRAME */
+@keyframes anime1 {
+  0%  {opacity: 0;}
+  80% {transform: translate(10px);}
+  90% {transform: translate(-10px);}
+  100% {opacity: 1; transform: translate(0px);}
+}
+@keyframes anime2 {
+  0%  {opacity: 0;}
+  80% {transform: translate(-10px);}
+  90% {transform: translate(10px);}
+  100% {opacity: 1; transform: translate(0px);}
 }
 
 .callback-form label {
