--- a/css/style.css
+++ b/css/style.css
@@ -45,11 +45,9 @@ img {
   position:fixed;
   transition: .4s ease-in;
 }
-
 .navbar.top {
   background: transparent;
 }
-
 .navbar ul {
   display: flex;
 }
@@ -58,7 +56,6 @@ img {
   color: #fff;
   padding: 10px 20px;
   margin: 0 10px;
-  animation: navbar 1.3s forwards ease-in;
 }
 .navbar a:hover{ 
   border-bottom: #28a745 2px solid;
@@ -95,13 +92,13 @@ img {
 }
 
 .hero .content h1 {
-  transform: translate(1200px);
-  animation: anime1 1.2s forwards ease-in-out;
+  /* transform: translate(1200px);
+  animation: anime1 1.2s forwards ease-in-out; */
   font-size: 55px;
 }
 .hero .content p {
-  transform: translate(-1200px);
-  animation: anime2 1.2s forwards ease-in-out;
+  /* transform: translate(-1200px);
+  animation: anime2 1.2s forwards ease-in-out; */
   font-size: 24px;
   max-width: 600px;
   margin: 20px 0 30px 0;
@@ -188,23 +185,6 @@ img {
   border-radius: 5px;
 }
 
-/* KEYFRAME */
-@keyframes navbar {
-  0% {opacity: 0; }
-  100% {opacity: 1; }
-}
-@keyframes anime1 {
-  0%  {opacity: 0;}
-  80% {transform: translate(10px);}
-  90% {transform: translate(-10px);}
-  100% {opacity: 1; transform: translate(0px);}
-}
-@keyframes anime2 {
-  0%  {opacity: 0;}
-  80% {transform: translate(-10px);}
-  90% {transform: translate(10px);}
-  100% {opacity: 1; transform: translate(0px);}
-}
 
 .callback-form label {
   display: block;
@@ -309,4 +289,12 @@ img {
     margin-bottom: 15px;
 }
 
+}
+@media (max-width: 400px) {
+  .navbar a {
+    padding: 5px;
+  }
+  .hero .content {
+    margin-top: -30px;
+  }
 }
